[gd_scene load_steps=12 format=3 uid="uid://c126nxf8x5cia"]

[ext_resource type="Script" path="res://Game/DialogLayouts/Main/MainDialogLayout.gd" id="1_mdc5e"]
[ext_resource type="PackedScene" uid="uid://dr1yr87qslefe" path="res://addons/DialogHelperTool/Game/VideoPlayer/VideoPlayer.tscn" id="2_bd4gk"]
[ext_resource type="PackedScene" uid="uid://brwri52cvrt25" path="res://addons/DialogHelperTool/Game/Background/BackgroundCompose.tscn" id="3_emjuu"]
[ext_resource type="PackedScene" uid="uid://bqvgut40x8oo3" path="res://addons/DialogHelperTool/Game/Person/PersonLayout.tscn" id="4_yp4nd"]
[ext_resource type="PackedScene" uid="uid://digxc7fp286c2" path="res://addons/DialogHelperTool/Game/TextArea/TextArea.tscn" id="5_po7wk"]
[ext_resource type="PackedScene" uid="uid://civ12v0wc52bt" path="res://addons/DialogHelperTool/Game/ChoiceControl/ChoiceBlock/ChoicesBlock.tscn" id="6_coxd1"]
[ext_resource type="Texture2D" uid="uid://dqrqyhgaiumpw" path="res://Resources/1Main/GUI/Menus/mainmenu.png" id="7_1oylu"]
[ext_resource type="PackedScene" uid="uid://c4fasdiht6o4k" path="res://Game/CustomBackgrounds/RelationBackground/RelationBackground.tscn" id="7_q3ar0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7shg"]
bg_color = Color(0, 0, 0.121569, 1)
shadow_color = Color(1, 0.709804, 0, 0.298039)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4h7yl"]
bg_color = Color(0.713726, 0, 0, 0)
corner_radius_top_right = 20
corner_radius_bottom_right = 20
shadow_color = Color(1, 0.6, 0.180392, 0.862745)
shadow_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_towvq"]
font_size = 24
font_color = Color(0.917647, 0.705882, 0.254902, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 1, 0.364706)

[node name="MainDialogLayout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdc5e")

[node name="VideoPlayer" parent="." instance=ExtResource("2_bd4gk")]
layout_mode = 1
mouse_filter = 1

[node name="BackgroundCompose" parent="VideoPlayer" instance=ExtResource("3_emjuu")]
layout_mode = 1
mouse_filter = 1

[node name="CustomBackgroundContainer" type="Control" parent="VideoPlayer/BackgroundCompose"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="PersonLayout" parent="VideoPlayer/BackgroundCompose/CustomBackgroundContainer" instance=ExtResource("4_yp4nd")]
layout_mode = 1
mouse_filter = 2

[node name="CustomChoiceSceneContainer" type="Control" parent="VideoPlayer/BackgroundCompose/CustomBackgroundContainer/PersonLayout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextArea" parent="VideoPlayer/BackgroundCompose/CustomBackgroundContainer/PersonLayout/CustomChoiceSceneContainer" instance=ExtResource("5_po7wk")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.639
anchor_right = 0.901
anchor_bottom = 0.909
offset_left = -20.8
offset_top = -0.120059
offset_right = -19.92
offset_bottom = 8.27996

[node name="ChoicesBlock" parent="VideoPlayer/BackgroundCompose/CustomBackgroundContainer/PersonLayout/CustomChoiceSceneContainer/TextArea" instance=ExtResource("6_coxd1")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.799
anchor_top = -2.247
anchor_right = 1.072
anchor_bottom = 0.103
offset_left = -0.490037
offset_top = 0.100065
offset_right = 0.27996
offset_bottom = 0.0999901

[node name="RelationBackground" parent="." instance=ExtResource("7_q3ar0")]
visible = false
layout_mode = 1

[node name="TextArea" parent="RelationBackground" instance=ExtResource("5_po7wk")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.639
anchor_right = 0.901
anchor_bottom = 0.909
offset_left = -20.8
offset_top = -0.120059
offset_right = -19.92
offset_bottom = 8.27996

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 2.08165e-12)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_1oylu")
stretch_mode = 6

[node name="ProgressBar" type="ProgressBar" parent="Control"]
self_modulate = Color(1, 1, 1, 0.509804)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.87
anchor_right = 0.99
anchor_bottom = 0.971
offset_left = 0.799999
offset_top = 0.39993
offset_right = -0.800133
offset_bottom = 0.319919
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.811765, 0.827451, 0.156863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 1, 0.603922)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 30
theme_override_styles/background = SubResource("StyleBoxFlat_r7shg")
theme_override_styles/fill = SubResource("StyleBoxFlat_4h7yl")
show_percentage = false

[node name="Label" type="Label" parent="Control/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_towvq")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="VideoPlayer/BackgroundCompose/CustomBackgroundContainer/PersonLayout" to="VideoPlayer/BackgroundCompose/CustomBackgroundContainer/PersonLayout" method="_on_gui_input"]
[connection signal="on_next" from="RelationBackground" to="." method="_on_relation_background_on_next"]
